src/test/ui/coherence/coherence-overlap-upstream-inherent.old.stderr
error[E0592]: duplicate definitions with name `dummy`
  --> $DIR/coherence-overlap-upstream-inherent.rs:15:32
   |
LL | impl<T> A<T> where T: Remote { fn dummy(&self) { } }
   |                                ^^^^^^^^^^^^^^^^^^^ duplicate definitions for `dummy`
...
LL | impl A<i16> { fn dummy(&self) { } }
   |               ------------------- other definition for `dummy`
   |
   = note: upstream crates may add new impl of trait `coherence_lib::Remote` for type `i16` in future versions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0592`.
